# WaterCrawl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEV_SETUP.md  Dockerfile  Makefile  README.md  Readme.md  crowdin.yml  requirements.txt
backend/: .dockerignore  .env.example  .env.local  .gitignore  CHANGELOG.md  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  entrypoint.sh  manage.py  pyproject.toml  test.py
backend/.rules/: 01-architecture-overview.md  02-models-and-services.md  03-api-and-views.md  04-factory-pattern.md  05-async-and-realtime.md  06-agent-system.md  07-code-style.md
backend/agent/: apps.py  chat_service.py  consts.py  executors.py  factories.py  filters.py  models.py  parameter_strategy.py  serializers.py  services.py  storages.py  tasks.py  urls.py  utils.py  views.py
backend/agent/migrations/: 0001_initial.py  0002_messageblock_structured_response.py  0003_alter_apispecparameters_tool_parameter_type_and_more.py  0004_agent_enable_as_tool_agent_tool_description_and_more.py
backend/agent/parsers/: api_spec_parsers.py  mcp_parser.py
backend/agent/templates/agent/: oauth_callback.html
backend/agent/tools/: base.py  scraper.py
backend/agent/tools/general/: date.py  sleep.py  structured_files.py  text_files.py  think.py
backend/agent/tools/watercrawl/: __init__.py  tools.py
backend/common/: application_context.py  docs.py  encryption.py  handlers.py  models.py  pagination.py  permissions.py  schema.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/common/templates/common/: home.html
backend/common/tests/: test_encryption.py  test_services.py  test_views.py
backend/core/: admin.py  apps.py  consts.py  docs.py  factories.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
backend/core/migrations/: 0004_alter_crawlresultattachment_attachment.py  0005_crawlrequest_duration.py  0007_alter_crawlrequest_status.py  0008_crawlrequest_sitemap.py  0009_searchrequest.py  0010_proxyserver.py  0011_alter_proxyserver_options_alter_proxyserver_password.py  0012_proxyserver_category.py  0013_alter_crawlrequest_status_alter_searchrequest_status_and_more.py  0014_crawlrequest_urls.py  0015_crawlrequest_crawl_type.py  0016_alter_crawlresult_request_alter_crawlresult_result_and_more.py
backend/core/tests/: test_models.py  test_pubsub.py  test_serializers.py  test_services.py
backend/knowledge_base/: admin.py  apps.py  consts.py  factories.py  feature.py  filters.py  helpers.py  interfaces.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/knowledge_base/management/: __init__.py
backend/knowledge_base/management/commands/: migrate_vector_store.py
backend/knowledge_base/migrations/: 0001_initial.py  0002_initial.py  0003_alter_knowledgebasedocument_status.py  0003_remove_knowledgebase_embedding_model_and_more.py  0004_knowledgebase_summarizer_temperature.py  0004_retrievalsetting_reranker_model_config_and_more.py  0005_knowledgebasequery.py
backend/knowledge_base/tools/: file_to_markdown.py  interfaces.py  keyword_extractors.py  processor.py  retrieval_strategies.py  storage.py  summarizers.py  vectore_store.py
backend/knowledge_base/vector_stores/: base.py  feeder.py  models.py  reranker.py  retriever.py
backend/knowledge_base/vector_stores/opensearch/: __init__.py  vector_store.py
backend/knowledge_base/vector_stores/postgres/: __init__.py  vector_store.py
backend/llm/: admin.py  consts.py  factories.py  interfaces.py  models.py  providers.py  serializers.py  services.py  urls.py  views.py
backend/llm/admin_api/: serializers.py  services.py  urls.py  views.py
backend/llm/migrations/: 0001_initial.py  0002_alter_providerconfig_api_key.py  0002_llmmodel_default_temperature_and_more.py  0003_providerconfigmodel_delete_embeddingmodel_and_more.py
backend/llm/models_config/: config.py
backend/llm/models_config/cohere/: __init__.py  (+1 more)
backend/locker/: __init__.py  helpers.py
backend/locker/tests/: test_helpers.py
backend/plan/: admin.py  apps.py  authentication.py  consts.py  factories.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  throttle.py  urls.py  utils.py  validators.py  views.py
backend/plan/migrations/: 0002_usagehistory_search_request_and_more.py  0003_usagehistory_sitemap_request.py  0004_plan_number_of_each_knowledge_base_documents_and_more.py  0005_usagehistory_content_id_usagehistory_content_type_and_more.py  0006_auto_20250807_1344.py  0007_remove_usagehistory_crawl_request_and_more.py  0008_plan_knowledge_base_retrival_rate_limit.py  0009_alter_subscriptionpayment_subscription_and_more.py  0010_plan_agent_rate_limit_plan_number_of_agents.py
backend/plan/tests/: test_models.py  test_services.py
backend/scripts/: extract_untranslated.py  update_po_from_json.py
backend/spider/: extensions.py  helpers.py  items.py  middlewares.py  pipelines.py  sentry_unhandled.py  settings.py
backend/spider/spiders/: __init__.py  google_search.py  scraper.py  sitemap.py
backend/spider/tests/: test_extensions.py  test_helpers.py  test_middlewares.py  test_pipelines.py  test_settings.py
backend/templates/admin/: base_site.html
backend/user/: admin.py  decorators.py  factories.py  managers.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
backend/user/migrations/: 0001_initial.py  0002_user_reset_password_expires_at_and_more.py  0004_user_email_verification_token_user_email_verified.py  0005_alter_user_email_verified.py  0006_team_is_default.py  0007_alter_team_is_default.py  0012_teaminvitation_invitation_token.py  0013_alter_team_options_alter_teamapikey_options_and_more.py  0014_add_media_model.py
backend/user/tests/: test_models.py  test_serializers.py  test_services.py  test_smoke.py  test_views.py
backend/watercrawl/: __init__.py  asgi.py  celery.py  sentry.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/watercrawl/tests/: test_routing.py
(+714 files in other folders)
